<resources>
    <string name="app_name">My Shop</string>
    <string name="OR">OR</string>
    <string name="sign_up_instead">sign up instead</string>
    <string name="sign_in">sign in</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="phone_no">phone no</string>
    <string name="password">password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in_instead">log in instead</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Error_occurred">Error occurred</string>
    <string name="User_successfully_added">User successfully added</string>
    <string name="Name_cannot_be_empty">Name cannot be empty</string>
    <string name="Name_cannot_be_so_big">Name cannot be so big</string>
    <string name="Email_cannot_be_so_big">Email cannot be so big</string>
    <string name="Enter_a_valid_ph_no">Enter a valid ph no</string>
    <string name="Password_cannot_be_so_big">Password cannot be so big</string>
    <string name="Log_out">Log out</string>
    <string name="create_new_shop">create new shop</string>
    <string name="name_of_new_shop">name of new shop</string>
    <string name="You_currently_not_have_any_shop_to_work_on_please_create_a_new_one">You currently have no shop to work on please create a new one</string>
    <string name="Shop_name_cannot_be_empty">Shop name cannot be empty</string>
    <string name="Shop_created_successfully">Shop created successfully</string>
    <string name="navDrClose">close</string>
    <string name="navDrOpen">open</string>
    <string name="Products">Products</string>
    <string name="Customers_and_suppliers">Customers and suppliers</string>
    <string name="Bills_and_payments">Bills and payments</string>
    <string name="Groups">Groups</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Change_or_create_shop">Change or create shop</string>
    <string name="Submit">Submit</string>
    <string name="Successfully_updated">Successfully updated</string>
    <string name="forgot_id">forgot id</string>
    <string name="forgot_password">forgot password</string>
    <string name="Id_cannot_be_empty">Id cannot be empty</string>
    <string name="failed">failed</string>
    <string name="buy">buy</string>
    <string name="total">"total"</string>
    <string name="buyOrSell">Buy or Sell</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="Have_to_pay">Have to pay</string>
    <string name="save">save</string>
    <string name="QR">QR</string>
    <string name="print">print</string>
    <string name="paid">paid</string>
    <string name="Do_you_want_to_delete">Do you want to delete</string>
    <string name="Yes">Yes</string>
    <string name="Add">Add</string>
    <string name="Unknown">Unknown</string>
</resources>