<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAct"
    android:orientation="vertical"
    android:gravity="center"


    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Log_In"
    android:textSize="60dp"

    />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <EditText
        android:id="@+id/idEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/id"

        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotIdTxt"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_id"

            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <EditText
        android:id="@+id/passEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassTxt"
        android:layout_alignParentRight="true"
        android:text="@string/forgot_password"

        />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:text="@string/sign_in"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupInsteadTxt"
        android:textColor="@color/blue"
        android:text="@string/sign_up_instead"
        android:padding="5dp"
        android:gravity="center"

        />

</LinearLayout>