<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOrCreateShopAct"
    android:orientation="vertical"



    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameTxt"
        android:textSize="50dp"
        android:gravity="center_horizontal"


        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutTxt"
            android:text="@string/Log_out"
            android:textColor="@color/blue"
            android:padding="20dp"
            android:textSize="@dimen/normalFont"
            android:layout_alignParentRight="true"

            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newShopNameEdt"
        android:hint="@string/name_of_new_shop"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createNewShopBtn"
        android:text="@string/create_new_shop"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/showShopsReview"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/You_currently_not_have_any_shop_to_work_on_please_create_a_new_one"

        />
</LinearLayout>